Move the core.parser classes into the lang-core subproject.

--- a/src/lang-core/build.gradle
+++ b/src/lang-core/build.gradle
@@ -2,5 +2,7 @@ sourceSets.main.java.srcDirs += 'main'
 sourceSets.test.java.srcDirs += 'test'
 
 dependencies {
+    compile project(':src:kotlin-intellij')
+
     testCompile project(':src:kotlin-hamcrest')
 }
