Split out the XDM interfaces and classes from xpath.model into a lang-xdm subproject.

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'src:intellij-compat'
 include 'src:intellij-mock'
 
 include 'src:lang-core'
+include 'src:lang-xdm'
 include 'src:lang-xpath'
