--- a/src/lang-xpath/build.gradle
+++ b/src/lang-xpath/build.gradle
@@ -4,6 +4,7 @@ sourceSets.test.java.srcDirs += 'test'
 
 dependencies {
     compile project(':src:lang-core')
+    compile project(':src:lang-xdm')
 
     testCompile project(':src:kotlin-hamcrest')
     testCompile project(':src:intellij-mock')
