--- a/build.gradle
+++ b/build.gradle
@@ -127,11 +127,13 @@ dependencies {
     compile project(':src:kotlin-intellij')
     compile project(':src:intellij-compat')
     compile project(':src:lang-core')
+    compile project(':src:lang-xdm')
     compile project(':src:lang-xpath')
 
     testCompile project(':src:kotlin-hamcrest')
     testCompile project(':src:intellij-mock')
     testCompile project(':src:lang-core')
+    testCompile project(':src:lang-xdm')
     testCompile project(':src:lang-xpath')
 
     integrationTestCompile configurations.testCompile
