Move ResourceVirtualFile to the lang-core subpackage.

--- a/src/lang-core/build.gradle
+++ b/src/lang-core/build.gradle
@@ -1,5 +1,6 @@
 sourceSets.main.java.srcDirs += 'main'
 sourceSets.test.java.srcDirs += 'test'
+sourceSets.test.resources.srcDirs += 'test/resources'
 
 dependencies {
     compile project(':src:kotlin-intellij')
