--- a/src/lang-xpath/build.gradle
+++ b/src/lang-xpath/build.gradle
@@ -1,6 +1,8 @@
 sourceSets.main.java.srcDirs += 'main'
 sourceSets.main.resources.srcDirs += 'main/resources'
+
 sourceSets.test.java.srcDirs += 'test'
+sourceSets.test.resources.srcDirs += 'test/resources'
 
 dependencies {
     compile project(':src:intellij-compat')
