Move XPathParenthesizedItemTypePsiImpl to the lang-xpath subproject.

--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -1,2 +1,3 @@
 construct.if-without-else='if' without 'else'
+construct.parenthesized-sequence-type=parenthesized 'SequenceType'
 xpath.files.filetype.description=XML Path Language
