--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -1,5 +1,6 @@
 construct.if-without-else='if' without 'else'
 construct.parenthesized-sequence-type=parenthesized 'SequenceType'
 parser.error.expected-eof=XPST0003: Expected end of file.
+parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
 parser.error.unexpected-token=XPST0003: Unexpected token.
 xpath.files.filetype.description=XML Path Language
