--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -2,5 +2,6 @@ construct.if-without-else='if' without 'else'
 construct.parenthesized-sequence-type=parenthesized 'SequenceType'
 parser.error.expected-eof=XPST0003: Expected end of file.
 parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
+parser.error.incomplete-string=XPST0003: Unclosed string literal.
 parser.error.unexpected-token=XPST0003: Unexpected token.
 xpath.files.filetype.description=XML Path Language
