[xpath parser] XML 1.0 EBNF (3) S

--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -2,6 +2,7 @@ construct.if-without-else='if' without 'else'
 construct.parenthesized-sequence-type=parenthesized 'SequenceType'
 parser.error.end-of-comment-without-start=XPST0003: End of comment marker found without a ''{0}'' start of comment marker.
 parser.error.expected-eof=XPST0003: Expected end of file.
+parser.error.expected-expression=XPST0003: Missing expression.
 parser.error.incomplete-comment=XPST0003: Unclosed XPath/XQuery comment.
 parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
 parser.error.incomplete-string=XPST0003: Unclosed string literal.
