--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -9,4 +9,6 @@ parser.error.incomplete-string=XPST0003: Unclosed string literal.
 parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a qualified name.
 parser.error.qname.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a qualified name.
 parser.error.unexpected-token=XPST0003: Unexpected token.
+parser.error.wildcard.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a wildcard.
+parser.error.wildcard.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a wildcard.
 xpath.files.filetype.description=XML Path Language
