--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -6,6 +6,7 @@ parser.error.expected-expression=XPST0003: Missing expression.
 parser.error.incomplete-comment=XPST0003: Unclosed XPath/XQuery comment.
 parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
 parser.error.incomplete-string=XPST0003: Unclosed string literal.
+parser.error.qname.missing-local-name=XPST0003: Missing local name after ':' in qualified name.
 parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a qualified name.
 parser.error.qname.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a qualified name.
 parser.error.unexpected-token=XPST0003: Unexpected token.
