[xpath parser] Handle missing prefix and local name parts in a QName.

--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -7,6 +7,7 @@ parser.error.incomplete-comment=XPST0003: Unclosed XPath/XQuery comment.
 parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
 parser.error.incomplete-string=XPST0003: Unclosed string literal.
 parser.error.qname.missing-local-name=XPST0003: Missing local name after ':' in qualified name.
+parser.error.qname.missing-prefix=XPST0003: Missing prefix before ':' in qualified name.
 parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a qualified name.
 parser.error.qname.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a qualified name.
 parser.error.unexpected-token=XPST0003: Unexpected token.
