--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -11,6 +11,7 @@ parser.error.qname.missing-prefix=XPST0003: Missing prefix before ':' in qualifi
 parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a qualified name.
 parser.error.qname.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a qualified name.
 parser.error.unexpected-token=XPST0003: Unexpected token.
+parser.error.wildcard.both-prefix-and-local-wildcard=XPST0003: Wildcard prefix and local parts are not allowed.
 parser.error.wildcard.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a wildcard.
 parser.error.wildcard.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a wildcard.
 xpath.files.filetype.description=XML Path Language
