--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -23,7 +23,7 @@
       <li>
         Fix parsing QNames in NameTests where the prefix is <code>attribute</code>,
         <code>element</code>, <code>every</code>, <code>exit</code>, <code>namespace</code>,
-        <code>return</code>, or <code>some</code>.
+        <code>processing-instruction</code>, <code>return</code>, or <code>some</code>.
       </li>
       <li>
         Fix parsing NCNames in FunctionCalls and NameTests where the name is
