--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -10,6 +10,7 @@ parser.error.qname.missing-local-name=XPST0003: Missing local name after ':' in 
 parser.error.qname.missing-prefix=XPST0003: Missing prefix before ':' in qualified name.
 parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a qualified name.
 parser.error.qname.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a qualified name.
+parser.error.qname.wildcard-local-name=XPST0003: Wildcard local name after ':' in qualified name.
 parser.error.unexpected-token=XPST0003: Unexpected token.
 parser.error.unexpected-wildcard=XPST0003: Expected qualified name or identifier, not a wildcard.
 parser.error.wildcard.both-prefix-and-local-wildcard=XPST0003: Wildcard prefix and local parts are not allowed.
