--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -3,6 +3,7 @@ construct.parenthesized-sequence-type=parenthesized 'SequenceType'
 parser.error.end-of-comment-without-start=XPST0003: End of comment marker found without a ''{0}'' start of comment marker.
 parser.error.expected-eof=XPST0003: Expected end of file.
 parser.error.expected-expression=XPST0003: Missing expression.
+parser.error.expected-ncname-not-qname=XPST0003: Expected an identifier not a qualified name.
 parser.error.incomplete-comment=XPST0003: Unclosed XPath/XQuery comment.
 parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
 parser.error.incomplete-string=XPST0003: Unclosed string literal.
