[xpath parser] XPath 3.0 EBNF (100) BracedURILiteral.

--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -4,6 +4,7 @@ parser.error.end-of-comment-without-start=XPST0003: End of comment marker found 
 parser.error.expected-eof=XPST0003: Expected end of file.
 parser.error.expected-expression=XPST0003: Missing expression.
 parser.error.expected-ncname-not-qname=XPST0003: Expected an identifier not a qualified name.
+parser.error.incomplete-braced-uri-literal=XPST0003: Unclosed braced URI literal.
 parser.error.incomplete-comment=XPST0003: Unclosed XPath/XQuery comment.
 parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
 parser.error.incomplete-string=XPST0003: Unclosed string literal.
