Use parseQNameNCName in parseURIQualifiedName.

--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -1,6 +1,8 @@
 construct.if-without-else='if' without 'else'
 construct.parenthesized-sequence-type=parenthesized 'SequenceType'
 parser.error.end-of-comment-without-start=XPST0003: End of comment marker found without a ''{0}'' start of comment marker.
+parser.error.eqname.missing-local-name=XPST0003: Missing local name after '}' in braced URI qualified name.
+parser.error.eqname.wildcard-local-name=XPST0003: Wildcard local name after '}' in braced URI qualified name.
 parser.error.expected-eof=XPST0003: Expected end of file.
 parser.error.expected-expression=XPST0003: Missing expression.
 parser.error.expected-ncname-not-qname=XPST0003: Expected an identifier not a qualified name.
