[xpath parser] XPath 3.0 EBNF (47) Wildcard / BracedURILiteral.

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,8 @@ src/lang-xpath/test/resources/tests/parser/xpath-1.0/*.txt text eol=lf
 src/lang-xpath/test/resources/tests/parser/xpath-1.0/*.xq text eol=lf
 src/lang-xpath/test/resources/tests/parser/xpath-2.0/*.txt text eol=lf
 src/lang-xpath/test/resources/tests/parser/xpath-2.0/*.xq text eol=lf
+src/lang-xpath/test/resources/tests/parser/xpath-3.0/*.txt text eol=lf
+src/lang-xpath/test/resources/tests/parser/xpath-3.0/*.xq text eol=lf
 src/test/resources/tests/folding/*.xq text eol=lf
 src/test/resources/tests/parser/basex-6.1/*.txt text eol=lf
 src/test/resources/tests/parser/basex-6.1/*.xq text eol=lf
