Move XQueryIcons to a new lang-xquery subpackage.

--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,7 @@ dependencies {
     compile project(':src:lang-core')
     compile project(':src:lang-xdm')
     compile project(':src:lang-xpath')
+    compile project(':src:lang-xquery')
     compile project(':src:plugin-api')
     compile project(':src:plugin-basex')
     compile project(':src:plugin-existdb')
@@ -144,6 +145,7 @@ dependencies {
     testCompile project(':src:lang-core')
     testCompile project(':src:lang-xdm')
     testCompile project(':src:lang-xpath')
+    testCompile project(':src:lang-xquery')
     testCompile project(':src:plugin-api')
     testCompile project(':src:plugin-basex')
     testCompile project(':src:plugin-existdb')
