--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include 'src:intellij-mock'
 include 'src:lang-core'
 include 'src:lang-xdm'
 include 'src:lang-xpath'
+include 'src:lang-xquery'
 
 include 'src:plugin-api'
 include 'src:plugin-basex'
