Move the XQuery language object to the lang-xquery subproject.

--- a/src/lang-xquery/build.gradle
+++ b/src/lang-xquery/build.gradle
@@ -2,3 +2,10 @@ sourceSets.main.java.srcDirs += 'main'
 sourceSets.main.resources.srcDirs += 'main/resources'
 
 sourceSets.test.java.srcDirs += 'test'
+
+dependencies {
+    compile project(':src:lang-xpath')
+
+    testCompile project(':src:kotlin-hamcrest')
+    testCompile project(':src:lang-xpath')
+}
