Move the XQuery lexer classes to the lang-xquery subproject.

--- a/src/lang-xquery/build.gradle
+++ b/src/lang-xquery/build.gradle
@@ -6,6 +6,7 @@ sourceSets.test.java.srcDirs += 'test'
 dependencies {
     compile project(':src:lang-xpath')
 
+    testCompile project(':src:intellij-mock')
     testCompile project(':src:kotlin-hamcrest')
     testCompile project(':src:lang-xpath')
 }
