[xpath parser] XPath 2.0 EBNF (60) AttributeTest

--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -5,6 +5,7 @@ parser.error.eqname.missing-local-name=XPST0003: Missing local name after '}' in
 parser.error.eqname.wildcard-local-name=XPST0003: Wildcard local name after '}' in braced URI qualified name.
 parser.error.expected=XPST0003: Expected ''{0}''.
 parser.error.expected-eof=XPST0003: Expected end of file.
+parser.error.expected-eqname=XPST0003: Missing qualified name or braced URI qualified name.
 parser.error.expected-expression=XPST0003: Missing expression.
 parser.error.expected-ncname-not-qname=XPST0003: Expected an identifier not a qualified name.
 parser.error.incomplete-braced-uri-literal=XPST0003: Unclosed braced URI literal.
