Move Query to the plugin-api subproject.

--- a/src/plugin-api/build.gradle
+++ b/src/plugin-api/build.gradle
@@ -3,6 +3,7 @@ sourceSets.test.java.srcDirs += 'test'
 
 dependencies {
     compile project(':src:intellij-compat')
+    compile project(':src:kotlin-intellij')
 
     testCompile project(':src:kotlin-hamcrest')
 }
