Move the BaseX version.xq resource into a new plugin-basex subproject.

--- a/build.gradle
+++ b/build.gradle
@@ -134,6 +134,7 @@ dependencies {
     compile project(':src:lang-xdm')
     compile project(':src:lang-xpath')
     compile project(':src:plugin-api')
+    compile project(':src:plugin-basex')
 
     testCompile project(':src:kotlin-hamcrest')
     testCompile project(':src:intellij-mock')
@@ -141,11 +142,13 @@ dependencies {
     testCompile project(':src:lang-xdm')
     testCompile project(':src:lang-xpath')
     testCompile project(':src:plugin-api')
+    testCompile project(':src:plugin-basex')
 
     integrationTestCompile configurations.testCompile
     integrationTestCompile sourceSets.main.output
     integrationTestCompile project(':src:kotlin-hamcrest')
     integrationTestCompile project(':src:plugin-api')
+    integrationTestCompile project(':src:plugin-basex')
 
     integrationTestRuntime configurations.testRuntime
 }
