Move the MarkLogic query resources into a new plugin-marklogic subproject.

--- a/build.gradle
+++ b/build.gradle
@@ -136,6 +136,7 @@ dependencies {
     compile project(':src:plugin-api')
     compile project(':src:plugin-basex')
     compile project(':src:plugin-existdb')
+    compile project(':src:plugin-marklogic')
 
     testCompile project(':src:kotlin-hamcrest')
     testCompile project(':src:intellij-mock')
@@ -145,6 +146,7 @@ dependencies {
     testCompile project(':src:plugin-api')
     testCompile project(':src:plugin-basex')
     testCompile project(':src:plugin-existdb')
+    testCompile project(':src:plugin-marklogic')
 
     integrationTestCompile configurations.testCompile
     integrationTestCompile sourceSets.main.output
@@ -152,6 +154,7 @@ dependencies {
     integrationTestCompile project(':src:plugin-api')
     integrationTestCompile project(':src:plugin-basex')
     integrationTestCompile project(':src:plugin-existdb')
+    integrationTestCompile project(':src:plugin-marklogic')
 
     integrationTestRuntime configurations.testRuntime
 }
