--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,4 @@ include 'src:lang-xpath'
 include 'src:plugin-api'
 include 'src:plugin-basex'
 include 'src:plugin-existdb'
+include 'src:plugin-marklogic'
