--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,4 @@ include 'src:plugin-api'
 include 'src:plugin-basex'
 include 'src:plugin-existdb'
 include 'src:plugin-marklogic'
+include 'src:plugin-saxon'
