Pass an IntelliJ Language object instead of the mimetype to the query processor API.

--- a/src/plugin-basex/build.gradle
+++ b/src/plugin-basex/build.gradle
@@ -4,6 +4,7 @@ sourceSets.main.resources.srcDirs += 'main/resources'
 sourceSets.test.java.srcDirs += 'test'
 
 dependencies {
+    compile project(':src:lang-xquery')
     compile project(':src:plugin-api')
 
     testCompile project(':src:kotlin-hamcrest')
