--- a/src/plugin-saxon/build.gradle
+++ b/src/plugin-saxon/build.gradle
@@ -3,5 +3,6 @@ sourceSets.test.java.srcDirs += 'test'
 
 dependencies {
     compile project(':src:lang-xdm')
+    compile project(':src:lang-xquery')
     compile project(':src:plugin-api')
 }
