--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -1,5 +1,20 @@
+browser.choose.configuration=Configuration File
+browser.choose.implementation-api-jar=Implementation/API JAR File
 processor.exception.host-connection-error=Cannot connect to ''{0}''
 processor.exception.missing-hostname=Missing hostname
 processor.exception.missing-jar=Missing JAR file
 processor.exception.unsupported-jar=Unsupported JAR file
 processor.exception.unsupported-operation=Configuration not supported by the processor
+xquery.settings.dialog.query-processor.admin-port.label=Admin port:
+xquery.settings.dialog.query-processor.api-jar.label=JAR File:
+xquery.settings.dialog.query-processor.config-path.label=Configuration File:
+xquery.settings.dialog.query-processor.create=New Query Processor Instance
+xquery.settings.dialog.query-processor.database-port.label=Database port:
+xquery.settings.dialog.query-processor.edit=Edit Query Processor Instance
+xquery.settings.dialog.query-processor.hostname.label=Hostname:
+xquery.settings.dialog.query-processor.implementation.label=Implementation:
+xquery.settings.dialog.query-processor.name.label=Name:
+xquery.settings.dialog.query-processor.password.label=Password:
+xquery.settings.dialog.query-processor.standalone.label=Create a standalone instance
+xquery.settings.dialog.query-processor.username.label=Username:
+xquery.settings.dialog.query-processor.validating-processor=Validating the query processor instance...
