--- a/src/lang-xdm/build.gradle
+++ b/src/lang-xdm/build.gradle
@@ -2,5 +2,7 @@ sourceSets.main.java.srcDirs += 'main'
 sourceSets.test.java.srcDirs += 'test'
 
 dependencies {
+    compile project(':src:lang-core')
+
     testCompile project(':src:kotlin-hamcrest')
 }
