--- a/src/plugin-api/build.gradle
+++ b/src/plugin-api/build.gradle
@@ -6,6 +6,7 @@ sourceSets.test.java.srcDirs += 'test'
 dependencies {
     compile project(':src:intellij-compat')
     compile project(':src:kotlin-intellij')
+    compile project(':src:lang-xdm')
 
     testCompile project(':src:kotlin-hamcrest')
 }
