--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -1,10 +1,15 @@
 browser.choose.configuration=Configuration File
 browser.choose.implementation-api-jar=Implementation/API JAR File
+browser.choose.script-file=Script File
 processor.exception.host-connection-error=Cannot connect to ''{0}''
 processor.exception.missing-hostname=Missing hostname
 processor.exception.missing-jar=Missing JAR file
 processor.exception.unsupported-jar=Unsupported JAR file
 processor.exception.unsupported-operation=Configuration not supported by the processor
+xquery.configurations.processor.manage-processors=Manage Query Processors
+xquery.configurations.processor.manage-processors-empty=No processors
+xquery.configurations.processor.query-processor.label=Query Processor:
+xquery.configurations.processor.script-file.label=Script File:
 xquery.settings.dialog.query-processor.admin-port.label=Admin port:
 xquery.settings.dialog.query-processor.api-jar.label=JAR File:
 xquery.settings.dialog.query-processor.config-path.label=Configuration File:
