--- a/build.gradle
+++ b/build.gradle
@@ -128,14 +128,6 @@ task integrationTest(type: Test) {
 }
 
 dependencies {
-    compile project(':src:kotlin-intellij')
-    compile project(':src:intellij-compat')
-    compile project(':src:lang-core')
-    compile project(':src:lang-xdm')
-    compile project(':src:lang-xpath')
-    compile project(':src:lang-xquery')
-    compile project(':src:lang-xqdoc')
-    compile project(':src:plugin-api')
     compile project(':src:plugin-basex')
     compile project(':src:plugin-existdb')
     compile project(':src:plugin-marklogic')
@@ -143,25 +135,8 @@ dependencies {
 
     testCompile project(':src:kotlin-hamcrest')
     testCompile project(':src:intellij-mock')
-    testCompile project(':src:lang-core')
-    testCompile project(':src:lang-xdm')
-    testCompile project(':src:lang-xpath')
-    testCompile project(':src:lang-xquery')
-    testCompile project(':src:plugin-api')
-    testCompile project(':src:plugin-basex')
-    testCompile project(':src:plugin-existdb')
-    testCompile project(':src:plugin-marklogic')
-    testCompile project(':src:plugin-saxon')
 
     integrationTestCompile configurations.testCompile
-    integrationTestCompile sourceSets.main.output
-    integrationTestCompile project(':src:kotlin-hamcrest')
-    integrationTestCompile project(':src:plugin-api')
-    integrationTestCompile project(':src:plugin-basex')
-    integrationTestCompile project(':src:plugin-existdb')
-    integrationTestCompile project(':src:plugin-marklogic')
-    integrationTestCompile project(':src:plugin-saxon')
-
     integrationTestRuntime configurations.testRuntime
 }
 
@@ -216,9 +191,11 @@ task moduleDependencyReport {
         def deps = [:]
         buildDeps(deps, rootProject)
         deps.forEach { from, toList ->
-            if (from != rootProject.name) {
-                file << "\"$from\" [shape=none]\n"
-                toList.forEach { to -> file << ("\"$from\" -> \"$to\"\n") }
+            file << "\"$from\" [shape=none]\n"
+            toList.forEach { to ->
+                if (to != "kotlin-hamcrest" && to != "intellij-mock") {
+                    file << ("\"$from\" -> \"$to\"\n")
+                }
             }
         }
         file << "}\n"
