Move XQueryConfigurationType to the lang-xquery subproject.

--- a/src/lang-xpath/build.gradle
+++ b/src/lang-xpath/build.gradle
@@ -5,9 +5,8 @@ sourceSets.test.java.srcDirs += 'test'
 sourceSets.test.resources.srcDirs += 'test/resources'
 
 dependencies {
-    compile project(':src:intellij-compat')
-    compile project(':src:lang-xdm')
     compile project(':src:lang-xqdoc')
+    compile project(':src:plugin-api')
 
     testCompile project(':src:intellij-mock')
     testCompile project(':src:kotlin-hamcrest')
