--- a/src/plugin-marklogic/build.gradle
+++ b/src/plugin-marklogic/build.gradle
@@ -5,6 +5,7 @@ sourceSets.test.java.srcDirs += 'test'
 
 dependencies {
     compile project(':src:lang-xquery')
+    compile project(':src:lang-xslt')
 
     testCompile project(':src:kotlin-hamcrest')
 }
