--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -9,8 +9,8 @@ processor.exception.unsupported-operation=Configuration not supported by the pro
 xquery.configurations.processor.manage-processors=Manage Query Processors
 xquery.configurations.processor.manage-processors-empty=No processors
 xquery.configurations.processor.query-processor.label=Query Processor:
+xquery.configurations.processor.query-group.label=Query
 xquery.configurations.processor.script-file.label=Script File:
-xquery.settings.dialog.query-processor.admin-port.label=Admin port:
 xquery.settings.dialog.query-processor.api-jar.label=JAR File:
 xquery.settings.dialog.query-processor.config-path.label=Configuration File:
 xquery.settings.dialog.query-processor.create=New Query Processor Instance
