--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -8,11 +8,11 @@ processor.exception.unsupported-jar=Unsupported JAR file
 processor.exception.unsupported-operation=Configuration not supported by the processor
 xquery.configurations.processor.manage-processors=Manage Query Processors
 xquery.configurations.processor.manage-processors-empty=No processors
-xquery.configurations.processor.query-processor.label=Query Processor:
+xquery.configurations.processor.query-processor.label=Query processor:
 xquery.configurations.processor.query-group.label=Query
-xquery.configurations.processor.script-file.label=Script File:
-xquery.settings.dialog.query-processor.api-jar.label=JAR File:
-xquery.settings.dialog.query-processor.config-path.label=Configuration File:
+xquery.configurations.processor.script-file.label=Script file:
+xquery.settings.dialog.query-processor.api-jar.label=JAR file:
+xquery.settings.dialog.query-processor.config-path.label=Configuration file:
 xquery.settings.dialog.query-processor.create=New Query Processor Instance
 xquery.settings.dialog.query-processor.database-port.label=Database port:
 xquery.settings.dialog.query-processor.edit=Edit Query Processor Instance
