--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -1,3 +1,6 @@
+executor.profile.toolwindow.name=Profile
+executor.profile.start.action=Profile
+executor.profile.description=Profile selected configuration
 browser.choose.configuration=Configuration File
 browser.choose.implementation-api-jar=Implementation/API JAR File
 browser.choose.script-file=Script File
