Display the ProfileReport metadata in the console view.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -9,6 +9,9 @@ processor.exception.missing-hostname=Missing hostname
 processor.exception.missing-jar=Missing JAR file
 processor.exception.unsupported-jar=Unsupported JAR file
 processor.exception.unsupported-operation=Configuration not supported by the processor
+profile.console.created.label=Created: {0}
+profile.console.elapsed.label=Elapsed: {0}
+profile.console.version.label=Version: {0}
 xquery.configurations.processor.manage-processors=Manage Query Processors
 xquery.configurations.processor.manage-processors-empty=No processors
 xquery.configurations.processor.query-processor.label=Query processor:
