Display the ProfileEntry results in the table view.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -12,6 +12,14 @@ processor.exception.unsupported-operation=Configuration not supported by the pro
 profile.console.created.label=Created: {0}
 profile.console.elapsed.label=Elapsed: {0}
 profile.console.version.label=Version: {0}
+profile.entry.table.column-number.column.label=Column
+profile.entry.table.deep-time.column.label=Deep Time (s)
+profile.entry.table.expression.column.label=Expression
+profile.entry.table.hits.column.label=Hits
+profile.entry.table.line-number.column.label=Line
+profile.entry.table.module.column.label=Module
+profile.entry.table.shallow-time.column.label=Shallow Time (s)
+profile.entry.table.no-results=No detailed profile results available
 xquery.configurations.processor.manage-processors=Manage Query Processors
 xquery.configurations.processor.manage-processors-empty=No processors
 xquery.configurations.processor.query-processor.label=Query processor:
