Improve the appearance of the profile metadata pane.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -10,8 +10,11 @@ processor.exception.missing-jar=Missing JAR file
 processor.exception.unsupported-jar=Unsupported JAR file
 processor.exception.unsupported-operation=Configuration not supported by the processor
 profile.console.created.label=Created: {0}
+profile.console.created.label.no-value=Created:
 profile.console.elapsed.label=Elapsed: {0}
+profile.console.elapsed.label.no-value=Elapsed:
 profile.console.version.label=Version: {0}
+profile.console.version.label.no-value=Version:
 profile.entry.table.column-number.column.label=Column
 profile.entry.table.deep-time.column.label=Deep Time (s)
 profile.entry.table.expression.column.label=Expression
