Create a QueryResultTable class.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -21,8 +21,12 @@ profile.entry.table.expression.column.label=Expression
 profile.entry.table.hits.column.label=Hits
 profile.entry.table.line-number.column.label=Line
 profile.entry.table.module.column.label=Module
-profile.entry.table.shallow-time.column.label=Shallow Time (s)
 profile.entry.table.no-results=No detailed profile results available
+profile.entry.table.shallow-time.column.label=Shallow Time (s)
+query.result.table.item-type.column.label=Item Type
+query.result.table.mime-type.column.label=MIME Type
+query.result.table.no-results=The query returned an empty sequence
+query.result.table.value.column.label=Value
 xquery.configurations.processor.manage-processors=Manage Query Processors
 xquery.configurations.processor.manage-processors-empty=No processors
 xquery.configurations.processor.query-processor.label=Query processor:
