Saxon: Support running XSLT queries.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -1,9 +1,10 @@
-executor.profile.toolwindow.name=Profile
-executor.profile.start.action=Profile
-executor.profile.description=Profile selected configuration
 browser.choose.configuration=Configuration File
 browser.choose.implementation-api-jar=Implementation/API JAR File
 browser.choose.script-file=Script File
+error.missing-xslt-source=Missing source document (context item)
+executor.profile.toolwindow.name=Profile
+executor.profile.start.action=Profile
+executor.profile.description=Profile selected configuration
 processor.exception.host-connection-error=Cannot connect to ''{0}''
 processor.exception.missing-hostname=Missing hostname
 processor.exception.missing-jar=Missing JAR file
