--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -1,6 +1,9 @@
 browser.choose.configuration=Configuration File
 browser.choose.implementation-api-jar=Implementation/API JAR File
 browser.choose.script-file=Script File
+console.action.save.label=Save
+console.action.save.profile.description=The file will be overridden with the profile report.
+console.action.save.profile.title=Save Profile Report
 error.missing-xslt-source=Missing source document (context item)
 executor.profile.toolwindow.name=Profile
 executor.profile.start.action=Profile
