Add an RDF output format field to the query processor settings.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -35,6 +35,7 @@ xquery.configurations.processor.manage-processors=Manage Query Processors
 xquery.configurations.processor.manage-processors-empty=No processors
 xquery.configurations.processor.query-processor.label=Query processor:
 xquery.configurations.processor.query-group.label=Query
+xquery.configurations.processor.rdf-format.label=RDF output format:
 xquery.configurations.processor.script-file.label=Script file:
 xquery.settings.dialog.query-processor.api-jar.label=JAR file:
 xquery.settings.dialog.query-processor.config-path.label=Configuration file:
